# custom_comm

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.txt  requirements.txt  setup.py
cmake/: FindCANN.cmake
docs/: faq.md  getting-started.md  step-by-step-tutorial.md  todo.md
docs/design/: omni-ops编译指南.md  refactor-plan.md  搬家计划.md  构建系统.md  模块化重构计划.md  目录设计.md
ops/allgather_batch/inc/: allgather_batch.h  common.h  hccl_custom_allgather_batch.h  log_util.h
ops/allgather_batch/src/: all_gather_batch.cc  ccu_dispatch.cc  ccu_dispatch.h
ops/allgather_batch/src/ccu/: ccu_kernel_ag_batch_mesh1d.cc  engine_ctx.cc
ops/allgather_batch/src/ccu_ms/: ccu_kernel_ag_batch_mesh1d_ms.cc  ccu_kernel_ag_batch_mesh1d_ms.h  ccu_kernel_ag_batch_mesh1d_ms_v2.cc  engine_ctx_ms.cc  engine_ctx_ms.h  go_size.cc  go_size.h
ops/allgather_batch/src/ccu_sched/: ccu_kernel_ag_batch_mesh1d.cc  ccu_kernel_ag_batch_mesh1d.h  engine_ctx.h
ops/allgather_batch/src/decomposed/: decomposed_strategy.cc
ops/op_common/inc/: ccu_kernel_alg_base.h
ops/op_common/src/: ccu_kernel_alg_base.cc
python/custom_comm/: __init__.py  ops.py
testcase/: Makefile  README.md  main.cc  run.sh
tests/: _hccl_modes.py  bench_allgather_batch.py  conftest.py  smoke_test.py  test_abi_firewall.py  test_allgather_batch.py  test_graph_mode.py
tests/allgather_batch/: bench.py  ccu_ms_bench.py  test_eager.py  test_graph.py  test_native_allgather.py
torch_ext/csrc/: allgather_batch.cpp
